tests/fail/18_char_empty.lang
// ОЖИДАЕТСЯ ОШИБКА: ожидалось выражение
функция Начало(): целое {
  символ empty = '';
  вернуть 0;
}
